fixed deployment url

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://bradscottwhite.github.io/lambda-test",
+  "homepage": "https://bradscottwhite.github.io/lambda-puppeteer-react-test",
   "name": "lambda-test",
   "version": "0.1.0",
   "private": true,
